--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -248,4 +248,6 @@
     <!-- Constant for hidden ribbon drag handle -->
     <dimen name="ribbon_drag_handle_height">25dp</dimen>
 
+    <!-- Network stats text size -->
+    <dimen name="network_stats_text_size">10dp</dimen>
 </resources>
